--- a/style.css
+++ b/style.css
@@ -152,7 +152,7 @@ header .icons i:hover{
 
 .news-list{
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-gap: 4rem;
     margin-top: 5rem;
 }
@@ -164,6 +164,8 @@ header .icons i:hover{
 .new img{
     width: 100%;
     border-radius: 1rem;
+    display: block;
+    transition: .5s;
 }
 .layer{
     width: 100%;
@@ -180,6 +182,7 @@ header .icons i:hover{
     flex-direction: column;
     padding: 0 4rem;
     transition: .5s;
+    text-align: center;
 }
 .layer p{
     color: #fff;
@@ -220,7 +223,9 @@ header .icons i:hover{
     width: 50%;
     display: flex;
     align-items: center;
+    justify-content: center;
     flex-wrap: wrap;
+    margin-left: 5rem;
 }
 .swiper{
     width: 100%;
@@ -235,12 +240,10 @@ header .icons i:hover{
 .swiper .swiper-pagination-bullet{
     background-color: #fff; 
 }
-.site-right{
-    padding: 5rem;
-}
 .site-right h1{
-    margin-bottom: 3rem;
+    margin-bottom: 4rem;
 }
+
 .site-right .tab-titles{
     display: flex;
     align-items: baseline;
@@ -254,6 +257,20 @@ header .icons i:hover{
     margin-right: 3rem;
     margin-bottom: 4rem;
     cursor: pointer;
+    position: relative;
+}
+.site-right .tab-links::after{
+    content: '';
+    width: 0;
+    height: 3px;
+    background-color: var(--blue);
+    position: absolute;
+    left: 0;
+    bottom: -8px;
+    transition: .5s;
+}
+.site-right .tab-links.active-link::after{
+    width: 100%;
 }
 .site-right .tab-links i{
     margin-left: 1rem;
@@ -293,8 +310,28 @@ header .icons i:hover{
     .home .home-left h3 span{
         font-size: 4rem;
     }
+    .site .site-row{
+        margin-top: 5rem;
+        flex-direction: column;
+    }
+    .site-left{
+        width: 100%;
+    }
+    .site-right{
+        width: 100%;
+        display: block;
+        margin-top: 5rem;
+        margin-left: 0;
+    }
+    .site-right .tab-contents{
+        text-align: center;
+    }
+    
 }
 @media (max-width: 849px){
+    .sub-title{
+        font-size: 4rem;
+    }
     section{
         padding: 5rem 10%;
     }
@@ -351,7 +388,7 @@ header .icons i:hover{
     .home .home-left h1 span{
         font-size: 8rem;
     }
-
+    
 }
 
 
