--- a/style.css
+++ b/style.css
@@ -292,6 +292,46 @@ header .icons i:hover{
     transform: rotate(180deg);
 }
 
+/* course section */
+
+.course .container{
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    align-content: space-between;
+    margin-top: 5rem; 
+}
+.course .box{
+    width: 33.3%;
+    margin: 0 2rem;
+    border-radius: 1rem;
+    background: #5b5b5b;
+    cursor: pointer;
+    transition: .5s;
+}
+
+.course .box img{
+    width: 100%;
+    border-top-left-radius: 1rem;
+    border-top-right-radius: 1rem;
+}
+.course .box h3{
+    padding: 1rem 1rem 0 1.5rem;
+    font-size: 2.5rem;
+    color: var(--blue);
+}
+.course .box p{
+   color: #fff;
+   font-size: 1.8rem;
+   padding: 1.5rem;
+   margin-top: 2rem;
+   line-height: 1.6em;
+}
+.course .box:hover{
+    transform: scale(1.1);
+    box-shadow: 0 0 15px 5px var(--yellow);
+}
+
 
 /* media query */
 @media (max-width: 1070px){
@@ -377,6 +417,15 @@ header .icons i:hover{
     .btn{
         margin-bottom: 5rem;
     }
+    .course .container{
+        flex-direction: column;
+    }
+    .course .container .box{
+        width: 100%;
+        justify-content: center;
+        margin: 0 0 5rem 0;
+    }
+
 }
 @media (max-width: 450px){
     .home .home-right video{
